--- a/edit.html
+++ b/edit.html
@@ -381,7 +381,7 @@
                 </div>
             </div>
         </div>
-        <div class="form-group row">
+        <div class="form-group row pt-3 pb-3" style="background-color: white;position: sticky;bottom: 0;">
             <div class="offset-4 col-8">
                 <button name="submit" type="submit" class="btn btn-primary">Submit</button>
             </div>
