--- a/view.html
+++ b/view.html
@@ -66,13 +66,15 @@
                 <th>feature display type</th>
                 <th>feature display refreshrate</th>
                 <th>feature display backlight</th>
-                <th>feature display more</th>
+                <th>feature backlight dimming</th>
+                <th>series</th>
                 <th>feature assistant</th>
                 <th>feature audio</th>
                 <th>feature picture</th>
                 <th>feature connectivity</th>
+                <th>feature hdr</th>
                 <th>feature mounting</th>
-                <th>feature ports</th>
+                <th>feature game</th>
                 <th>feature power</th>
                 <th>warranty</th>
             </tr>
@@ -123,19 +125,21 @@
                     item.weight_stand +'</td><td>' +
                     item.weight_package +'</td><td>' +
                     item.releasedate +'</td><td>' +
-                    $.trim(item.feature_display_resolution) +'</td><td>' +
-                    $.trim(item.feature_display_type) +'</td><td>' +
-                    $.trim(item.feature_display_refreshrate) +'</td><td>' +
-                    $.trim(item.feature_display_backlight) +'</td><td>' +
-                    $.trim(item.feature_display_more) +'</td><td>' +
-                    $.trim(item.feature_assistant) +'</td><td>' +
-                    $.trim(item.feature_audio) +'</td><td>' +
-                    $.trim(item.feature_picture) +'</td><td>' +
-                    $.trim(item.feature_connectivity) +'</td><td>' +
-                    $.trim(item.feature_mounting) +'</td><td>' +
-                    $.trim(item.feature_ports) +'</td><td>' +
-                    $.trim(item.feature_power) +'</td><td>' +
-                    $.trim(item.warranty) +'</td></tr>');
+                    item.feature_display_resolution +'</td><td>' +
+                    item.feature_display_type +'</td><td>' +
+                    item.feature_display_refreshrate +'</td><td>' +
+                    item.feature_display_backlight +'</td><td>' +
+                    item.feature_backlight_dimming +'</td><td>' +
+                    item.series +'</td><td>' +
+                    item.feature_assistant +'</td><td>' +
+                    item.feature_audio +'</td><td>' +
+                    item.feature_picture +'</td><td>' +
+                    item.feature_connectivity +'</td><td>' +
+                    item.feature_hdr +'</td><td>' +
+                    item.feature_mounting +'</td><td>' +
+                    item.feature_game +'</td><td>' +
+                    item.feature_power +'</td><td>' +
+                    item.warranty +'</td></tr>');
 
                 });
             })
